docs/guide/website/versioned_docs/version-11.8.1/pro/about-pro.md
---
id: version-11.8.1-about-pro
title: About
original_id: about-pro
---

## Additional Features

| Feature                    | Community | Pro |
| -------------------------- | --------- | --- |
| Botpress NLU               | ✔️        | ✔️  |
| Visual Flow Editor         | ✔️        | ✔️  |
| Dialog Management          | ✔️        | ✔️  |
| Bot CMS                    | ✔️        | ✔️  |
| Unlimited Bots             | ✔️        | ✔️  |
| Unlimited Admins           |           | ✔️  |
| White-Label Chat Interface |           | ✔️  |
| RBAC                       |           | ✔️  |
| High-Availability          |           | ✔️  |
| Increased Performances     |           | ✔️  |
| Standard Support           |           | ✔️  |

For more details, visit our [pricing page](https://botpress.com/pricing/).

## Activation

To enable Botpress Pro features simply set `pro.enabled` to `true` in your botpress.config.json file
