docs/guide/website/versioned_docs/version-12.10.0/pro/about-pro.md
---
id: version-12.10.0-about-pro
title: About
original_id: about-pro
---

## Additional Features

| Feature                    | Community | Enterprise |
| -------------------------- | --------- | ---------- |
| Botpress NLU               | ✔️        | ✔️         |
| Visual Flow Editor         | ✔️        | ✔️         |
| Dialog Management          | ✔️        | ✔️         |
| Bot CMS                    | ✔️        | ✔️         |
| Unlimited Bots             | ✔️        | ✔️         |
| Unlimited Admins           |           | ✔️         |
| White-Label Chat Interface |           | ✔️         |
| Role-Based Access Control  |           | ✔️         |
| High-Availability          |           | ✔️         |
| Increased Performances     |           | ✔️         |
| Standard Support           |           | ✔️         |
| Multilanguage Bots         |           | ✔️         |

For more details, [contact sales team](https://botpress.com/request-demo/).

## Activation

To enable Botpress Enterprise features simply set `pro.enabled` to `true` in your `botpress.config.json` file

## White Label

There is an [example on our GitHub repository](https://github.com/botpress/botpress/tree/master/examples/whitelabel) on how to customize Botpress for white-labeling.
